Run JaCoCo seperately, and with a system attribute